# amazon-kinesis-video-streams-media-interface-fork

./: .gitignore  CMakeLists.txt
CMake/: ANIMATION.cmake  LIVESTREAM.cmake  STATICIMAGE.cmake  nrf7002dk_nrf5340_cpuapp.cmake
include/com/amazonaws/kinesis/video/capturer/: VideoCapturerLIVESTREAM.h
resources/frames/h264/: file_list.txt  keyframe.h  keyframe.h264
source/ANIMATION/: ANIMATIONAudioCapturer.c  ANIMATIONAudioPlayer.c  ANIMATIONCommon.h  ANIMATIONVideoCapturer.c
source/FILE/: FILEAudioCapturer.c  FILEVideoCapturer.c
source/LIVESTREAM/: LIVESTREAMAudioCapturer.c  LIVESTREAMAudioPlayer.c  LIVESTREAMCommon.h  LIVESTREAMVideoCapturer.c
source/STATICIMAGE/: STATICIMAGEAudioCapturer.c  STATICIMAGEAudioPlayer.c  STATICIMAGEVideoCapturer.c
source/nrf7002dk_nrf5340_cpuapp/: nrf7002dk_nrf5340_cpuappAudioCapturer.c  nrf7002dk_nrf5340_cpuappAudioPlayer.c  nrf7002dk_nrf5340_cpuappCommon.h  nrf7002dk_nrf5340_cpuappVideoCapturer.c
